circleci: use LABEL authors instead of MAINTAINER
The former is deprecated and does not allow for multiple authors.

Signed-off-by: Octavian Purdila <tavi@cs.pub.ro>

--- a/circleci/Dockerfile
+++ b/circleci/Dockerfile
@@ -1,5 +1,5 @@
 FROM ubuntu:16.04
-MAINTAINER Hajime Tazaki <thehajime@gmail.com>
+LABEL authors="Hajime Tazaki <thehajime@gmail.com>, Octavian Purdila <tavi@cs.pub.ro>"
 
 RUN apt-get update && \
     apt-get install -y software-properties-common && \
