--- a/circleci/android/arm64/Dockerfile
+++ b/circleci/android/arm64/Dockerfile
@@ -1,11 +1,11 @@
-FROM lkldocker/circleci-android:0.2
-MAINTAINER Hajime Tazaki <thehajime@gmail.com>
+FROM lkldocker/circleci-android:0.3
+LABEL authors="Hajime Tazaki <thehajime@gmail.com>, Octavian Purdila <tavi@cs.pub.ro>"
 
 # install toolchain from NDK
 RUN ./android-ndk-r15b/build/tools/make_standalone_toolchain.py --arch arm64 --api 23 --install-dir ./aarch64-linux-android && \
     rm -rf android-ndk-r15b
 
-# update toolchain, see https://github.com/lkl/linux/issues/348#issuecomment-312409409 
+# update toolchain, see https://github.com/lkl/linux/issues/348#issuecomment-312409409
 RUN wget -q https://android-git.linaro.org/platform/prebuilts/gcc/linux-x86/aarch64/aarch64-linux-android-5.4-linaro.git/snapshot/aarch64-linux-android-5.4-linaro-2016.06.tar.gz && \
 	 tar xfz aarch64-linux-android-5.4-linaro-2016.06.tar.gz && \
 	 cd aarch64-linux-android-5.4-linaro-2016.06 && \
