--- a/circleci/x86_64/Dockerfile
+++ b/circleci/x86_64/Dockerfile
@@ -2,5 +2,5 @@ FROM lkldocker/circleci:0.2
 MAINTAINER Hajime Tazaki <thehajime@gmail.com>
 
 RUN sudo apt-get update && \
-    sudo apt-get install -y libfuse-dev libarchive-dev linux-headers-4.4.0-97-generic && \
+    sudo apt-get install -y libfuse-dev libarchive-dev linux-headers-4.4.0-97-generic valgrind && \
     sudo rm -rf /var/lib/apt/lists/*
