update ccache link for minw, arm32/arm64
Signed-off-by: Hajime Tazaki <thehajime@gmail.com>

--- a/circleci/android/arm32/Dockerfile
+++ b/circleci/android/arm32/Dockerfile
@@ -10,4 +10,7 @@ RUN mkdir -p /home/ubuntu/android-sdk && \
     echo y | ./android-sdk/tools/bin/sdkmanager "system-images;android-24;default;armeabi-v7a" && \
     echo no | ./android-sdk/tools/bin/avdmanager create avd -n Nexus5_API24 -k "system-images;android-24;default;armeabi-v7a"
 
+# create ccache link
+RUN cd /usr/lib/ccache && sudo ln -s ../../bin/ccache arm-linux-androideabi-gcc
+
 ENV PATH ${PATH}:/home/ubuntu/arm-linux-androideabi/bin
