--- a/circleci/android/Dockerfile
+++ b/circleci/android/Dockerfile
@@ -1,10 +1,10 @@
-FROM lkldocker/circleci:0.5
+FROM thehajime/circleci:0-intermediate
 LABEL authors="Hajime Tazaki <thehajime@gmail.com>, Octavian Purdila <tavi@cs.pub.ro>"
 
 RUN echo oracle-java8-installer shared/accepted-oracle-license-v1-1 select true | sudo debconf-set-selections && \
-    sudo add-apt-repository -y ppa:webupd8team/java && \
+    sudo add-apt-repository -y ppa:ts.sch.gr/ppa || true && \
     sudo apt-get update && \
-    sudo apt-get install -y oracle-java8-installer unzip libgl1-mesa-glx libpulse0 && \
+    sudo apt-get install -y --allow-unauthenticated oracle-java8-installer unzip libgl1-mesa-glx libpulse0 && \
     sudo rm -rf /var/lib/apt/lists/* && \
     sudo rm -rf /var/cache/oracle-jdk8-installer
 
