--- a/circleci/android/arm64/Dockerfile
+++ b/circleci/android/arm64/Dockerfile
@@ -1,4 +1,4 @@
-FROM lkldocker/circleci-android:0.5
+FROM thehajime/circleci:1-intermediate
 LABEL authors="Hajime Tazaki <thehajime@gmail.com>, Octavian Purdila <tavi@cs.pub.ro>"
 
 # install toolchain from NDK
