--- a/circleci/freebsd11/Dockerfile
+++ b/circleci/freebsd11/Dockerfile
@@ -1,4 +1,4 @@
-FROM lkldocker/circleci:0.5
+FROM lkldocker/circleci:$GIT_TAG
 LABEL authors="Hajime Tazaki <thehajime@gmail.com>"
 
 RUN sudo apt-get update && \
