use circleci instead of docker hub autobuild
Signed-off-by: Hajime Tazaki <thehajime@gmail.com>

--- a/circleci/x86_64/Dockerfile
+++ b/circleci/x86_64/Dockerfile
@@ -1,4 +1,6 @@
-FROM lkldocker/circleci:0.5
+ARG GIT_ARG
+
+FROM lkldocker/circleci:${GIT_TAG}
 LABEL authors="Hajime Tazaki <thehajime@gmail.com>, Octavian Purdila <tavi@cs.pub.ro>"
 
 RUN sudo apt-get update && \
