--- a/circleci/android/arm32/Dockerfile
+++ b/circleci/android/arm32/Dockerfile
@@ -1,4 +1,6 @@
-FROM lkldocker/circleci-android:0.5
+ARG GIT_ARG
+
+FROM lkldocker/circleci-android:${GIT_TAG}
 LABEL authors="Hajime Tazaki <thehajime@gmail.com>, Octavian Purdila <tavi@cs.pub.ro>"
 
 # install toolchain from NDK
