--- a/circleci/android/Dockerfile
+++ b/circleci/android/Dockerfile
@@ -1,4 +1,6 @@
-FROM lkldocker/circleci:0.5
+ARG IMAGE_NAME
+
+FROM $IMAGE_NAME
 LABEL authors="Hajime Tazaki <thehajime@gmail.com>, Octavian Purdila <tavi@cs.pub.ro>"
 
 RUN echo oracle-java8-installer shared/accepted-oracle-license-v1-1 select true | sudo debconf-set-selections && \
