--- a/circleci/android/arm64/Dockerfile
+++ b/circleci/android/arm64/Dockerfile
@@ -1,4 +1,6 @@
-FROM lkldocker/circleci-android:0.5
+ARG IMAGE_NAME
+
+FROM $IMAGE_NAME
 LABEL authors="Hajime Tazaki <thehajime@gmail.com>, Octavian Purdila <tavi@cs.pub.ro>"
 
 # install toolchain from NDK
