--- a/circleci/mingw/Dockerfile
+++ b/circleci/mingw/Dockerfile
@@ -1,4 +1,6 @@
-FROM lkldocker/circleci:0.5
+ARG IMAGE_NAME
+
+FROM $IMAGE_NAME
 LABEL authors="Hajime Tazaki <thehajime@gmail.com>, Octavian Purdila <tavi@cs.pub.ro>"
 
 RUN sudo apt-get update && sudo apt-get install -y wget apt-transport-https
