--- a/circleci/Dockerfile
+++ b/circleci/Dockerfile
@@ -7,7 +7,7 @@ RUN apt-get update && \
     apt-get update && \
     apt-get install -y sudo build-essential bc git xfsprogs ccache btrfs-tools iputils-ping \
                        dosfstools python python-pip bison flex && \
-    pip install yamlish junit_xml && \
+    pip install yamlish==0.18.1 junit_xml==1.9 PyYAML==5.3.1 && \
     rm -rf /var/lib/apt/lists/*
 
 RUN useradd -ms /bin/bash ubuntu && adduser ubuntu sudo && echo -n 'ubuntu:ubuntu' | chpasswd
