--- a/circleci/Dockerfile
+++ b/circleci/Dockerfile
@@ -6,8 +6,9 @@ RUN apt-get update && \
     add-apt-repository ppa:git-core/ppa && \
     apt-get update && \
     apt-get install -y sudo build-essential bc git xfsprogs ccache btrfs-tools iputils-ping \
-                       dosfstools python python-pip bison flex && \
-    pip install yamlish==0.18.1 junit_xml==1.9 PyYAML==5.3.1 && \
+                       dosfstools python python-pip python3 python3-pip bison flex && \
+    pip  install yamlish==0.18.1 junit_xml==1.9 PyYAML==5.3.1 && \
+    pip3 install yamlish==0.18.1 junit_xml==1.9 PyYAML==5.3.1 && \
     rm -rf /var/lib/apt/lists/*
 
 RUN useradd -ms /bin/bash ubuntu && adduser ubuntu sudo && echo -n 'ubuntu:ubuntu' | chpasswd
